# soreq

./: .env.sample  .gitignore  README.md  main.py  mcp_client.py  mcp_server.py  pyproject.toml  ui.py
data/: README.md
research/: README.md
src/augmentation/: markdown_augmenter.py
src/embeddings/: __init__.py
src/indexer/: markdown_indexer.py
src/llm/: __init__.py
src/retriever/: markdown_retriever.py
src/vector_db/: __init__.py
wxo/: agent.yaml  clean.sh  deploy.sh
